# machinelearning

./: .gitignore  README.Rmd  README.md  machinelaerning.Rproj  pyproject.toml
labs/c1w1/: C1_W1_Lab02_Model_Representation_Soln.ipynb  C1_W1_Lab03_Cost_function_Soln.ipynb
labs/c1w2_assign/: C1_W2_Linear_Regression.ipynb
labs/c1w3_assign/: C1_W3_Logistic_Regression.ipynb
labs/c2w1_assign/: C2_W1_Assignment.ipynb
labs/c2w2_assign/: C2_W2_Assignment.ipynb
labs/c2w3/: C2W3_Lab_01_Model_Evaluation_and_Selection.ipynb
labs/c2w3_assign/: C2_W3_Assignment.ipynb
labs/c2w4_assign/: C2_W4_Decision_Tree_with_Markdown.ipynb
labs/c3w1_assign/assignment1/: C3_W1_KMeans_Assignment.ipynb
labs/c3w1_assign/assignment2/: C3_W1_Anomaly_Detection.ipynb
labs/c3w2/: C3_W2_Lab01_PCA_Visualization_Examples.ipynb
labs/c3w2_assign/assignment1/: C3_W2_Collaborative_RecSys_Assignment.ipynb
labs/c3w2_assign/assignment2/: C3_W2_RecSysNN_Assignment.ipynb
labs/c3w3_assign/: C3_W3_A1_Assignment.ipynb  lunar_lander_model.h5
models/: logistic_regression_digits.qmd  random_forests_insurance.qmd
py/: fun_decision_trees.py  fun_supervised_learning.py
qmd/: advanced_learning_algorithms_notes.qmd  aws_cloud_essentials.qmd  gam.qmd  intro.qmd  linear_regression.qmd  machine_learning_intro.qmd  notes_supervised_learning.qmd  python_numpy.qmd  supervised_learning_labs.qmd  supervised_learning_notes.qmd  unsupervised_learning_notes.qmd
