[tool.poetry]
name = "machinelaerning"
version = "0.1.0"
description = ""
authors = ["Hendrik Wagenseil <hendrik.wagenseil@addium.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
tensorflow = "^2.15.0"
scikit-learn = "^1.3.2"
ipykernel = "^6.27.1"
sympy = "^1.12"
pandas = "^2.1.4"
ipympl = "^0.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
